# Bangkong

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONDA_SETUP.md  LICENSE  README.md  SECURITY.md  bangkong.bat  bangkong_conda.bat  pyproject.toml  requirements-api.txt  requirements.txt  setup.py
bangkong/: __init__.py  benchmark_logs.txt
bangkong/api/: README.md  __init__.py  server.py
bangkong/config/: __init__.py  loader.py  schemas.py
bangkong/data/: __init__.py  pipeline.py
bangkong/data/processors/: __init__.py  audio_processor.py  base_processor.py  cross_modal_processor.py  document_processor.py  domain_processor.py  image_processor.py  regional_processor.py  text_processor.py  video_processor.py
bangkong/deployment/: __init__.py  manager.py
bangkong/exceptions/: __init__.py  resource_errors.py
bangkong/hardware/: __init__.py  allocator.py  detector.py
bangkong/models/: __init__.py  attention_specialization.py  bangkong_model.py  ca_moe_model.py  config.yaml  config_loader.py  cosine_clustered_embeddings.py  curriculum.py  distillation.py  efficient_attention.py  intelligent_init.py  multimodal.py  packager.py  peft.py  pruning.py  quantization.py  regional.py  specialized.py  trainer.py  training_manager.py
bangkong/monitoring/: __init__.py  tracker.py
bangkong/pre_intelligent/: __init__.py
bangkong/pre_intelligent/curriculum/: config.yaml  config_loader.py  reasoning_curriculum.py
bangkong/pre_intelligent/energy_layer/: energy_consistency.py
bangkong/pre_intelligent/hypernetwork/: prior_generator.py
bangkong/pre_intelligent/memory/: hierarchical_memory.py
bangkong/pre_intelligent/meta_learning/: maml_reptile.py
bangkong/pre_intelligent/reasoning_organs/: reasoning_heads.py
bangkong/utils/: __init__.py  dynamic_importer.py  path_manager.py  resource_manager.py  tokenizer_manager.py
bangkong/validation/: __init__.py  scaling_law_validator.py
benchmarks/: initialization_benchmark.py
configs/: 8gb_ram_test.yaml  CONFIG_TEMPLATES.md  README.md  audio_generator.yaml  better_test.yaml  broda.yaml  chatbot.yaml  code.yaml  code_llm_enhanced.yaml  coder.yaml  cross_modal.yaml  curriculum.yaml  default.yaml  development.yaml  distillation.yaml  efficiency.yaml  long_context.yaml  long_sequence.yaml  math.yaml  math_llm_enhanced.yaml  multimodal.yaml  pre_intelligent_code.yaml  pre_intelligent_code_50m.yaml  pre_intelligent_math.yaml  pre_intelligent_reasoning.yaml  pre_intelligent_small_model.md  pretrained_chatbot.yaml  production.yaml  pruning.yaml  reasoning_llm.yaml  reasoning_llm_enhanced.yaml  scientific.yaml  test.yaml  test_config.yaml  test_pre_intelligent.yaml  testing.yaml  video_generator.yaml  zecha.yaml
data/organized/code/: model_training_code.py  sample_0000_processed_sample_code.py
data/test/: test_samples.jsonl
docs/: ARCHITECTURE_EXPLANATION.md  FAQ.md  INDEX.md  QUICKSTART.md  TRAINING_MODES.md  TROUBLESHOOTING.md  architecture.md  configuration.md  contributing.md  curriculum_learning.md  deployment.md  development.md  hierarchical_memory.md  intelligent_initialization.md  models.md
docs/api/: README.md  openapi.yaml
examples/: README.md  api_client_example.py  fine_tuned_initialization_demo.py  hierarchical_memory_demo.py  initialization_effectiveness_demo.py  intelligent_initialization_demo.py  pre_intelligent_demo.py
scaling_law_results/: scaling_law_report.csv
scripts/: __init__.py  clean_data.py  convert.py  demo_pre_intelligent.py  deploy.py  download_tokenizer.py  evaluate.py  generate.py  organize_data.py  process_data.py  run_pre_intelligent_experiment.py  start_api.py  train.py  validate_scaling_law.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_hardware.py  test_hierarchical_memory.py  test_pre_intelligent_memory.py
validation/: enhanced_initialization_validator.py  initialization_validator.py
