[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bangkong-llm"
dynamic = ["version"]
description = "A production-ready, cloud-native system for training and deploying large language models"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Bangkong AI Team", email = "ai@bangkong.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.13.0",
    "torchvision>=0.14.0",
    "torchaudio>=0.13.0",
    "transformers>=4.25.0",
    "datasets>=2.8.0",
    "tokenizers>=0.13.0",
    "accelerate>=0.15.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "Pillow>=9.0.0",
    "opencv-python>=4.6.0",
    "librosa>=0.9.0",
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.0",
    "pyyaml>=6.0",
    "pydantic>=1.10.0",
    "psutil>=5.9.0",
    "fastapi>=0.88.0",
    "uvicorn>=0.20.0",
    "requests>=2.28.0",
    "safetensors>=0.3.0",
    "onnx>=1.13.0",
    "onnxruntime>=1.13.0",
    "wandb>=0.13.0",
    "mlflow>=2.0.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.scripts]
bangkong-train = "scripts.train:main"
bangkong-eval = "scripts.evaluate:main"
bangkong-convert = "scripts.convert:main"
bangkong-deploy = "scripts.deploy:main"

[project.urls]
Homepage = "https://github.com/your-org/bangkong"
"Bug Tracker" = "https://github.com/your-org/bangkong/issues"
Documentation = "https://github.com/your-org/bangkong/docs"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests",
]

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true