[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bangkong-llm"
version = "0.2.0"
description = "LLM training system with Pre-Intelligent Initialization"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Soni Nugraha", email = "bilbobangkong@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.13.0",
    "transformers>=4.25.0",
    "tokenizers>=0.13.0",
    "accelerate>=0.15.0",
    "numpy>=1.21.0",
    "pyyaml>=6.0",
    "pydantic>=1.10.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "safetensors>=0.3.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
# Data processing (optional)
data = [
    "pandas>=1.5.0",
    "Pillow>=9.0.0",
    "opencv-python>=4.6.0",
    "librosa>=0.9.0",
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.0",
]
# Deployment (optional)
deploy = [
    "fastapi>=0.88.0",
    "uvicorn>=0.20.0",
    "onnx>=1.13.0",
    "onnxruntime>=1.13.0",
]
# Monitoring ( optional)
monitoring = [
    "wandb>=0.13.0",
    "mlflow>=2.0.0",
]
# Full installation
all = [
    "bangkong-llm[data,deploy,monitoring]",
]
# Development
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[tool.setuptools]
# Include scripts/ as a top-level package
packages = ["bangkong", "scripts"]

[project.scripts]
bangkong-train = "scripts.train:main"

[project.urls]
Homepage = "https://github.com/shadowofsorrow/bangkong"
"Bug Tracker" = "https://github.com/shadowofsorrow/bangkong/issues"
Documentation = "https://github.com/shadowofsorrow/bangkong/blob/main/README.md"
"Research Paper" = "https://doi.org/10.5281/zenodo.19387331"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
ignore_missing_imports = true
